Home task complete

--- a/01-GithubBranchTask/users/01-HtmlListsTableTask/table.html
+++ b/01-GithubBranchTask/users/01-HtmlListsTableTask/table.html
@@ -1,12 +1,88 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+              <head>
+                <meta charset="UTF-8" />
+                <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+                <meta
+                  name="viewport"
+                  content="width=device-width, initial-scale=1.0"
+                />
+                <title>Document</title>
+                <style>
+                  table,
+                  th,
+                  td {
+                    border: 1px solid teal;
+                  }
+                </style>
+              </head>
+              <body>
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Resim</th>
+                      <th>Kurs adi</th>
+                      <th>Aciklama</th>
+                      <th>Kategori</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        <img
+                          width="80px"
+                          src="https://m.media-amazon.com/images/M/MV5BOThlM2M3N2MtN2FjYy00MzUzLTkzNjQtNTlmMmRlM2RlYTM4XkEyXkFqcGdeQXVyNzg5OTk2OA@@._V1_.jpg"
+                          alt=""
+                        />
+                      </td>
+                      <td>Lorem ipsum dolor sit amet.</td>
+                      <td>
+                        Lorem ipsuasda amet consectetur adipisicing
+                        eadsa Quo asdaQuaerat, sapiente ab.
+                      </td>
+                      <td>Web gelistirme</td>
+                      <td><a href="#">Kursu incele</a></td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          width="80px"
+                          height="80px"
+                          src="https://img.rasset.ie/00061097-1600.jpg"
+                          alt=""
+                        />
+                      </td>
+                      <td>Lorem ipsum dolor sit amet.</td>
+                      <td>
+                        Lorem ipsumasdsadasdasdas adsd ad a ! Q asuaerat, sapiente ab. dada
+                        dasda
+                      </td>
+                      <td>Web gelistirme</td>
+                      <td><a href="#">Kursu incele</a></td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          width="80px"
+                          height="80px"
+                          src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546091617i/15823480.jpg"
+                          alt=""
+                        />
+                      </td>
+                      <td>Lorem ipsum dolor sit amet.</td>
+                      <td>
+                        Lorem ipsum dolor siadsada adas vel ut dicta! Quaerat, sapiente ab. dada
+                        dasda
+                      </td>
+                      <td>Web gelistirme</td>
+                      <td><a href="#">Programlama</a></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </body>
+            </html>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
