background.fonts.icons

--- a/03.CSS-Background.Fonts.Icons/index.html
+++ b/03.CSS-Background.Fonts.Icons/index.html
@@ -57,62 +57,73 @@
                   </div>
                 </div>
               </div>
+            </section>
             </header>
-            <div class="ONE">
-              <div class="TWO">
-                <h2 class="div">We are front-end Developer</h2>
-                <br />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia autem
-                  cumque quibusdam nesciunt architecto omnis consequuntur, hic, aliquam
-                  mollitia quis dicta aspernatur corporis non? Dicta possimus
-                  perspiciatis commodi at? Quasi omnis mollitia adipisci obcaecati
-                  tempore hic aperiam saepe doloremque iste dolore, itaque rem magni
-                  possimus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Officia autem cumque quibusdam nesciunt architecto omnis consequuntur,
-                  hic, aliquam mollitia quis dicta aspernatur corporis non? Dicta
-                  possimus perspiciatis commodi at? Quasi omnis mollitia adipisci
-                  obcaecati tempore hic aperiam saepe doloremque iste dolore, itaque rem
-                  magni possimus.
-                </p>
-                <br />
-                <input type="button" value="Learn more" />
-              </div>
-              <div>
+            <section>
+              <div class="ONE">
+                <div class="TWO">
+                  <h2 class="div">We are front-end Developer</h2>
+                  <br />
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia autem
+                    cumque quibusdam nesciunt architecto omnis consequuntur, hic, aliquam
+                    mollitia quis dicta aspernatur corporis non? Dicta possimus
+                    perspiciatis commodi at? Quasi omnis mollitia adipisci obcaecati
+                    tempore hic aperiam saepe doloremque iste dolore, itaque rem magni
+                    possimus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Officia autem cumque quibusdam nesciunt architecto omnis consequuntur,
+                    hic, aliquam mollitia quis dicta aspernatur corporis non? Dicta
+                    possimus perspiciatis commodi at? Quasi omnis mollitia adipisci
+                    obcaecati tempore hic aperiam saepe doloremque iste dolore, itaque rem
+                    magni possimus.
+                  </p>
+                  <br />
+                 <input type="button" value="Learn more">
+                </div>
+                <div>
             </section>
         <section">
     <div id="red"></div>
 </section>
-<nav id="one1">
-    <ul>
-        <li><h3>company</h3></li>
-        <li>our services</li>
-        <li>our services</li>
-        <li>privace policy</li>
-        <li>program</li>
-    </ul>
-    <ul>
-        <li><h3>company</h3></li>
-        <li>our services</li>
-        <li>privace policy</li>
-        <li>program</li>
+<section>
+  <div>
 
-
-    </ul>
-    <ul>
-        <li><h3>company</h3></li>
-        <li>our services</li>
-        <li>privace policy</li>
-        <li>program</li>
-        <li>program</li>
-    </ul>
-    <ul>
-        <li>company</li>
-    </ul>
-    <i class="fa-brands fa-facebook"></i>
-    <i class="fa-brands fa-twitter"></i>
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-linkedin"></i> 
-</nav>
+    <nav id="one1">
+        <ul class="one2">
+            <li><h3>company</h3></li><br>
+            <li>our services</li>
+            <li>our services</li>
+            <li>privace policy</li>
+            <li>program</li>
+        </ul>
+        <ul class="one2">
+            <li><h3>company</h3></li><br>
+            <li>our services</li>
+            <li>privace policy</li>
+            <li>program</li>
+    
+    
+        </ul>
+        <ul class="one2">
+            <li><h3>company</h3></li><br>
+            <li>our services</li>
+            <li>privace policy</li>
+            <li>program</li>
+            <li>program</li>
+        </ul>
+        <ul class="one2">
+            <li><h3>company</h3></li><br>
+        </ul>
+        <ul class="one3">
+          <li class="one4">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-linkedin"></i>
+</li>
+        </ul>
+    </nav>
+  </div>
+</section>
     </body>
     </html>
