--- a/05-PortfolioMiniWEbPage/index.html
+++ b/05-PortfolioMiniWEbPage/index.html
@@ -105,7 +105,7 @@
                 <h3>web de<span class="services">vel</span>opment</h3>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga unde esse iste qui vitae consequuntur obcaecati, dolor pariatur iure quod porro deleniti velit reprehenderit quam. Unde illum odio animi corporis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga unde esse iste qui vitae consequuntur obcaecati, dolor pariaturanimi corporis!</p>
             </div>
         </div> 
         <div class="development">
@@ -114,7 +114,7 @@
                 <h3>web <span class="services">des</span>ign</h3>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga unde esse iste qui vitae consequuntur obcaecati, dolor pariatur iure quod porro deleniti velit reprehenderit quam. Unde illum odio animi corporis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga unde esse iste qui vitae consequuntur obcaecati, dolor pa odio animi corporis!</p>
             </div>
         </div>
         <div class="development">
@@ -123,7 +123,7 @@
                 <h3>app <span class="services">des</span>ign</h3>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga unde esse iste qui vitae consequuntur obcaecati, dolor pariatur iure quod porro deleniti velit reprehenderit quam. Unde illum odio animi corporis!</p>
+                <p>Lorem ipsum dolicing ee qui vitae consequuntur obcaecati, dolor pariatur iure quod porro deleniti velit reprehenderit quam. Unde illum odio animi corporis!</p>
             </div>
         </div>
     </section>
