--- a/09.loopstudio-landing-page/index.html
+++ b/09.loopstudio-landing-page/index.html
@@ -1,62 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <section class="bg-section">
-        <header class="header">
-            <div class="container">
-                <div class="head">
-                    <h3>loopstudios</h3>
-                    <nav>
-                        <ul>
-                            <li>
-                                <a href="#">about</a>
-                            </li>
-                            <li>
-                                <a href="#">cursers</a>
-                            </li>
-                            <li>
-                                <a href="#">events</a>
-                            </li>
-                            <li>
-                                <a href="#">products</a>
-                            </li>
-                            <li>
-                                <a href="#">support</a>
-                            </li>
-                        </ul>
-                    </nav>
+      <header class="header">
+        <div class="container">
+          <div class="head">
+            <h3>loopstudios</h3>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#">about</a>
+                </li>
+                <li>
+                  <a href="#">cursers</a>
+                </li>
+                <li>
+                  <a href="#">events</a>
+                </li>
+                <li>
+                  <a href="#">products</a>
+                </li>
+                <li>
+                  <a href="#">support</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="icon">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+          </div>
+        </div>
 
-                </div>
-            </div>
-        </header>
-        <section>
-            <div class="container">
-                <div class="main">
-                    <h1>IMMERSIVE EXPERIENCES THAT DELIVER </h1>
-                </div>
-            </div>
-        </section>
+      </header>
+      <section>
+        <div class="container">
+          <div class="main">
+            <h1>IMMERSIVE EXPERIENCES THAT DELIVER</h1>
+          </div>
+        </div>
+      </section>
     </section>
     <section>
-        <div class="container">
-            <div class="interactive">
-                <div class="left">
-                    <img src="./image-interactive.jpg" alt="">
-                </div>
-                <div class="right">
-                    <h1>THE LEADER IN INTERACTIVE VR</h1>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non similique minus doloremque explicabo aliquid magni quidem hic nesciunt rem velit, maxime quasi iusto quas.</P>
-                </div>
-            </div>
+      <div class="container">
+        <div class="interactive">
+          <div class="left">
+            <img src="./image-interactive.jpg" alt="" />
+          </div>
+          <div class="right">
+            <h1>THE LEADER IN INTERACTIVE VR</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              non similique minus doloremque explicabo aliquid magni quidem hic
+              nesciunt rem velit, maxime quasi iusto quas.
+            </p>
+          </div>
         </div>
+        <div class="CREAT">
+          <div class="left-1">
+            <h1>OUR CREATIONS</h1>
+          </div>
+          <div class="right-2">
+            <button class="see-all">SEE ALL</button>
+          </div>
+        </div>
+      </div>
     </section>
-    
-</body>
+    <section class="card">
+      <div class="container">
+        <div class="row-1">
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-3 py-3">
+                    <img class="img-1" src="./188c5b81-95bd-483c-bd03-3ca1f05d2876.jpg" alt="">
+                    <img class="img-2" src="./ced0e48a-1940-48d7-aace-f8f68773541d.jpg" alt="">
+                    <h4>POCKET</h4>
+                    <h4>BOREALIS</h4>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-3 py-3">
+                    <img class="img-1" src="./ad829585-20f7-47ea-9a3c-a5dfdce5b847.jpg" alt="">
+                    <img class="img-2" src="./20ce266d-8611-43e3-ae9c-88210ba030ef.jpg" alt="">
+                    <h4>NIGHT</h4>
+                    <h4>ARCADE</h4>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-3 py-3">
+                    <img  class="img-1" src="./7bb1d3f1-0740-4ff6-a8ae-9526307f2166.jpg" alt="">
+                    <img class="img-2" src="./c76d2011-36f5-4c19-b40e-a07ed60f557a.jpg" alt="">
+                    <h4>SOCCER</h4>
+                    <h4>TEAM VR</h4>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-3 py-3">
+                    <img class="img-1" src="./241f111e-ff73-4c3a-b318-9b9e857648de.jpg" alt="">
+                    <img class="img-2" src="./0c7372dc-7d06-46ac-a16a-ffaa80a0cb0b.jpg" alt="">
+                    <h4>FROM UP</h4>
+                    <h4>ABOVE VR</h4>
+                </div>
+                </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-3 py-3">
+                    <img class="img-1" src="./c684ae32-7e45-402d-8b49-4927da9b9658.jpg" alt="">
+                    <img class="img-2" src="./7ac1dd6a-9f6a-46d0-ae61-e960047c78ab.jpg" alt="">
+                    <h4>POCKET BOREALIS</h4>
+                    <h4>BOREALIS</h4>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-3 py-3">
+                    <img class="img-1" src="./55e8c3c3-e43c-4b70-9028-52cfd710574f.jpg" alt="">
+                    <img class="img-2" src="./2ca3d126-8567-4678-944e-a314193c9ae5.jpg" alt="">
+                    <h4>NIGHT</h4>
+                    <h4>ARCADE</h4>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-3 py-3">
+                    <img  class="img-1" src="./adeb4c9f-8a3b-41b7-b92a-f4b28d49e6fb.jpg" alt="">
+                    <img class="img-2" src="./937b8141-ecbb-4cbd-9da7-59df1c738442.jpg" alt="">
+                    <h4>THE</h4>
+                    <h4>CURIOSITY</h4>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-3">
+                    <img class="img-1" src="./e6238eea-4c9a-48f2-a5f9-dac3e7f49b02.jpg" alt="">
+                    <img class="img-2" src="./7ac1dd6a-9f6a-46d0-ae61-e960047c78ab.jpg" alt="">
+                    <h4>MAKE IT</h4>
+                    <h4>FISHEYE</h4>
+                </div>
+                </div>
+
+            </div>
+
+
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="container">
+        <div class="foot">
+          <div class="top">
+            <h3>loopstudios</h3>
+            <nav class="one">
+              <ul>
+                <li><i class="fa-brands fa-facebook-f"></i></li>
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-pinterest"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="bootom">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">about</a>
+                    </li>
+                    <li>
+                        <a href="#">curservs</a>
+                    </li>
+                    <li>
+                        <a href="#">events</a>
+                    </li>
+                    <li>
+                        <a href="#">products</a>
+                    </li>
+                    <li>
+                        <a href="#">support</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="media">
+                <h3>@2021 Loopstudios.All rights reserved</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
 </html>
