--- a/22.11.snobella-website/index.html
+++ b/22.11.snobella-website/index.html
@@ -179,16 +179,16 @@
                 <div class="button1">
                   <button>New</button>
                 </div>
-                <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 7.svg" alt="" />
+                <img src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img
                     src="./assets/images/kisspng-handbag-satchel-leather-coach-inc-tapestry-5adb94da175541 1.svg"
                     alt=""
                   />
                 </div>
-                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" />
+                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" /> -->
                 <p>
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
@@ -210,14 +210,14 @@
                 <img src="./assets/images/kisspng-handbag-satchel-leather-coach-inc-tapestry-5adb94da175541 1.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img
                     src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg"
                     alt=""
                   />
                 </div>
 
-                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" />
+                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" /> -->
                 <p>
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
@@ -237,14 +237,14 @@
                 <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img
                     src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg"
                     alt=""
                   />
                 </div>
                 <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" />
-                <p>
+                <p> -->
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
                 </p>
@@ -274,16 +274,16 @@
                 <div class="button1">
                   <button>New</button>
                 </div>
-                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" />
+                <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img
                     src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg"
                     alt=""
                   />
                 </div>
-                <img src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg alt="" />
+                <img src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg alt="" /> -->
                 <p>
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
@@ -302,17 +302,17 @@
                 <div class="button2">
                   <button>30 %</button>
                 </div>
-                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" />
+                <img src="./assets/images/kisspng-handbag-satchel-leather-coach-inc-tapestry-5adb94da175541 1.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img
                     src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg"
                     alt=""
                   />
                 </div>
 
-                <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 7.svg" alt="" />
+                <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 7.svg" alt="" /> -->
                 <p>
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
@@ -331,13 +331,13 @@
                 <div class="button2">
                   <button>30 %</button>
                 </div>
-                <img src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg" alt="" />
+                <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg" alt="" />
                 </div>
-                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" />
+                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" /> -->
                 <p>
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
@@ -371,13 +371,13 @@
                 <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img
                     src="./assets/images/kisspng-handbag-satchel-leather-coach-inc-tapestry-5adb94da175541 1.svg"
                     alt=""
                   />
                 </div>
-                <img src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg" alt="" />
+                <img src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg" alt="" /> -->
                 <p>
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
@@ -396,17 +396,17 @@
                 <div class="button1">
                   <button>New</button>
                 </div>
-                <img src="./assets/images/kisspng-handbag-baggage-hand-luggage-leather-women-bag-5acd4069b62017 1.svg" alt="" />
+                <img src="./assets/images/kisspng-handbag-satchel-leather-coach-inc-tapestry-5adb94da175541 1.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img
                     src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg"
                     alt=""
                   />
                 </div>
 
-                <img src="./assets/images/kisspng-handbag-satchel-leather-coach-inc-tapestry-5adb94da175541 1.svg" alt="" />
+                <img src="./assets/images/kisspng-handbag-satchel-leather-coach-inc-tapestry-5adb94da175541 1.svg" alt="" /> -->
                 <p>
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
@@ -428,13 +428,13 @@
                 <img src="./assets/images/kisspng-chanel-gucci-handbag-wallet-sell-my-gucci-bag-www-pixshark-com-images-galler-5b7def98c254a0 1.svg" alt="" />
               </div>
               <div class="center">
-                <div class="img">
+                <!-- <div class="img">
                   <img
                     src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg"
                     alt=""
                   />
                 </div>
-                <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg" alt="" />
+                <img src="./assets/images/kisspng-bag-laptop-backpack-knomo-beauchamp-5b0bf6a37cde46 9.svg" alt="" /> -->
                 <p>
                   Shoulder Bag Leather Bag Leather undertakes laborious physical
                   physical
